opam-version: "1.2"
maintainer: "andreashauptmann@t-online.de"
authors: [ "andreashauptmann@t-online.de" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/fdopen/uwt-js"
dev-repo: "https://github.com/fdopen/uwt-js.git"
bug-reports: "https://github.com/fdopen/uwt-js/issues"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  [make "target-clean"]
]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "cppo" {build & >= "1.3"}
  "lwt" {>= "3.0.0"}
  "js_of_ocaml" {>= "3.0.0"}
  "js_of_ocaml-ppx" {build}
]
available: [ocaml-version >= "4.04.0"]
